--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
 <body>
   
-  <header class="site-header">
+  <header class="site-headers">
     <div class="container header-inner">
       <a class="logo" href="index.html">Dilsara<span class="logo-dot">.</span></a>
       <nav class="main-nav">
